Now using Babel Now using database connection parameters as part of the request Added some documentation, including Sphinx
