# api/routes/rt_api.py
@@ -16,6 +16,7 @@ End points:
 # 3rd party imports
 import requests, json
 from flask import request, current_app, jsonify
+from uuid import UUID
 
 # Application imports
 from core import config, user, auth, clip_zip_ship
@@ -103,10 +104,10 @@ def logout():
 
 
 @routes.route('/api/collections', methods=["PUT"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
 def put_collections():
     """
-    Handles a PUT request on end point "/api/collections" to return the Collection information.
+    Handles a PUT request on end point "/api/collections" to add a Collection.
     """
 
     try:
@@ -120,7 +121,7 @@ def put_collections():
         clip_zip_ship.add_collection(d)
 
         # Respond
-        return rt_core.response_204()
+        return rt_core.response_201("")
 
     except UserMessageException as err:
         # Handle the error for the User
@@ -132,10 +133,10 @@ def put_collections():
 
 
 @routes.route('/api/collections/<collection>', methods=["DELETE"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
 def delete_collection(collection):
     """
-    Handles a PUT request on end point "/api/collections" to return the Collection information.
+    Handles a DELETE request on end point "/api/collections" to return the Collection information.
     """
 
     try:
@@ -158,14 +159,44 @@ def delete_collection(collection):
         rt_core.abort_error(err)
 
 
+@routes.route('/api/collections/<collection>', methods=["PATCH"])
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+def patch_collection(collection):
+    """
+    Handles a PATCH request on end point "/api/users" to update a user of the system.
+    """
+
+    try:
+        # Get the users
+        body = request.json
+        clip_zip_ship.update_collection(collection, body)
+
+        # Return 204
+        return rt_core.response_204()
+
+    except UserMessageException as err:
+        # Handle the error for the User
+        rt_core.abort_user_message(err)
+
+    except Exception as err:
+        # Raise a generic error
+        rt_core.abort_error(err)
+
+
 @routes.route('/api/metadata/<uuid>', methods=["GET"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
 def get_metadata(uuid):
     """
     Handles a GET request on end point "/api/metadata/{uuid}" to return the Metadata information.
     """
 
     try:
+        # Validate the uuid is valid uuid
+        if not is_valid_uuid(uuid):
+            raise UserMessageException(500,
+                                       "Invalide UUID.",
+                                       "UUID invalid.")
+
         # Connect to GeoNetwork to get the XML
         response = requests.get(config.CATALOG_URL.format(metadata_uuid=uuid))
 
@@ -185,7 +216,7 @@ def get_metadata(uuid):
 
 
 @routes.route('/api/parents', methods=["GET"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
 def get_parents():
     """
     Handles a GET request on end point "/api/parents" to return the Parents information.
@@ -204,16 +235,79 @@ def get_parents():
         rt_core.abort_error(err)
 
 
-@routes.route('/api/extent/<table_name>', methods=["GET"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
-def get_extent(table_name: str):
+@routes.route('/api/parents', methods=["PUT"])
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+def put_parent():
+    """
+    Handles a PUT request on end point "/api/parents" to add a parent for Collections.
+    """
+
+    try:
+        d = request.data
+        
+        if d:
+            d = d.decode()
+            d = json.loads(d)
+
+        # Redirect
+        parent_uuid = clip_zip_ship.add_parent(d)
+
+        # Respond
+        return rt_core.response_201(parent_uuid)
+
+    except UserMessageException as err:
+        # Handle the error for the User
+        rt_core.abort_user_message(err)
+
+    except Exception as err:
+        # Raise a generic error
+        rt_core.abort_error(err)
+
+
+@routes.route('/api/parents/<uuid>', methods=["DELETE"])
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+def delete_parent(uuid):
+    """
+    Handles a DELETE request on end point "/api/parents/"<uuid> to delete a Parent.
+    """
+
+    try:
+        # Redirect
+        deleted = clip_zip_ship.delete_parent(uuid)
+
+        # Respond
+        if deleted:
+            return rt_core.response_204()
+        
+        else:
+            return rt_core.redirect_not_found()
+
+    except UserMessageException as err:
+        # Handle the error for the User
+        rt_core.abort_user_message(err)
+
+    except Exception as err:
+        # Raise a generic error
+        rt_core.abort_error(err)
+
+
+@routes.route('/api/extent/<schema>/<table_name>/<out_crs>', methods=["GET"], defaults={'schema': 'nrcan', 'table_name': None, 'out_crs': 4326})
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+def get_extent(schema: str, table_name: str, out_crs: int):
     """
     Handles a GET request on end point "/api/extent/<table_name>" to return the Parents information.
     """
 
     try:
+        # Read the data
+        d = request.data
+        
+        if d:
+            d = d.decode()
+            d = json.loads(d)
+
         # Redirect
-        return clip_zip_ship.get_extent(table_name, 4326)
+        return clip_zip_ship.get_extent(schema, table_name, out_crs, d)
 
     except UserMessageException as err:
         # Handle the error for the User
@@ -248,7 +342,7 @@ def get_users():
 
 
 @routes.route('/api/user', methods=["POST"])
-#@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
+@rt_core.validate_user_level(config.ROLE_LEVEL_ADMIN)
 def post_user():
     """
     Handles a POST request on end point "/api/user" to create a User.
@@ -260,7 +354,7 @@ def post_user():
         if "username" in body and "password" in body:
             # Create the User
             user.create_user(body["username"], body["password"])
-            return rt_core.response_204()
+            return rt_core.response_201("")
 
         else:
             # Parameters invalid
@@ -318,3 +412,34 @@ def delete_user(username):
     except Exception as err:
         # Raise a generic error
         rt_core.abort_error(err)
+
+
+
+
+
+def is_valid_uuid(uuid_to_test, version=4):
+    """
+    Check if uuid_to_test is a valid UUID.
+    
+     Parameters
+    ----------
+    uuid_to_test : str
+    version : {1, 2, 3, 4}
+    
+     Returns
+    -------
+    `True` if uuid_to_test is a valid UUID, otherwise `False`.
+    
+     Examples
+    --------
+    >>> is_valid_uuid('c9bf9e57-1685-4c89-bafb-ff5af830be8a')
+    True
+    >>> is_valid_uuid('c9bf9e58')
+    False
+    """
+    
+    try:
+        uuid_obj = UUID(uuid_to_test, version=version)
+    except ValueError:
+        return False
+    return str(uuid_obj) == uuid_to_test
